--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,15 @@
     android:background="@color/colorPrimary"
     android:fitsSystemWindows="true">
 
-    <LinearLayout
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center">
+
+        <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
@@ -49,7 +57,7 @@
                 android:id="@+id/editTextPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/password"
+                android:hint="Clave"
                 android:inputType="textPassword" />
         </android.support.design.widget.TextInputLayout>
 
@@ -63,22 +71,24 @@
             android:text="@string/login"
             android:textColor="@android:color/white" />
 
-        <TextView
-            android:id="@+id/textViewCreateAccount"
+        <Button
+            android:id="@+id/buttonRegister"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:layout_marginTop="16dp"
+            android:text="Registrarse"
             android:gravity="center_horizontal" />
+    </LinearLayout>
 
-        <LinearLayout
+    <LinearLayout
             android:visibility="gone"
             android:id="@+id/llProgress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <ProgressBar
+        <ProgressBar
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center" />
@@ -87,10 +97,11 @@
                 android:textColor="@android:color/white"
                 android:layout_marginTop="4dp"
                 android:gravity="center"
-                android:text="Please wait Loging in.."
+                android:text="Espera, iniciando sesión..."
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small" />
-        </LinearLayout>
     </LinearLayout>
+    </RelativeLayout>
+
 </ScrollView>
