--- a/app/src/main/res/layout/activity_new_trip.xml
+++ b/app/src/main/res/layout/activity_new_trip.xml
@@ -2,35 +2,25 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
-    tools:context="com.energismart.ayudante.RegisterActivity">
-
-    <TextView
-        android:id="@+id/toolbar_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:textAppearanceMedium"
-        android:layout_centerHorizontal="true"
-        tools:text="Registro de nuevo usuario" />
+    tools:context="com.energismart.ayudante.NewTripActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true">
     <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/scrollview">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/imageView"
@@ -41,139 +31,154 @@
                 android:src="@drawable/logo" />
 
             <TextView
-                android:id="@+id/textViewProfile"
+                android:id="@+id/textViewPlacaNT"
                 android:layout_marginTop="16dp"
                 android:layout_marginLeft="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/profile_title"
+                android:text="Placa vehículo"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
             <Spinner
-                android:id="@+id/profile_spinnerR"
+                android:id="@+id/placaNT_spinner"
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="5dp"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/textViewOrigen"
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Origen"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+            <Spinner
+                android:id="@+id/origen_spinner"
                 android:layout_marginTop="16dp"
                 android:layout_marginLeft="5dp"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content" />
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/textInputLayoutEmail"
+                android:id="@+id/textInputLayoutPCargue"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 app:errorEnabled="true">
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/editTextEmail"
+                    android:id="@+id/editTextPCargue"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/email"
-                    android:inputType="textEmailAddress" />
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/textInputLayoutName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                app:errorEnabled="true">
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/editTextName"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/name"
+                    android:hint="Punto de cargue"
                     android:inputType="text" />
             </android.support.design.widget.TextInputLayout>
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/textInputLayoutPassword"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                app:errorEnabled="true"
-                app:passwordToggleEnabled="true"
-                app:passwordToggleTint="@color/colorAccent">
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/editTextPassword"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/password"
-                    android:inputType="textPassword" />
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/textInputLayoutPhone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                app:errorEnabled="true">
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/editTextPhone"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/phone"
-                    android:inputType="phone" />
-            </android.support.design.widget.TextInputLayout>
-
             <TextView
-                android:id="@+id/textViewLicense"
+                android:id="@+id/textViewDestino"
                 android:layout_marginTop="16dp"
                 android:layout_marginLeft="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/license_title"
+                android:text="Destino"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
-                <Spinner
-                    android:id="@+id/license_spinnerR"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content" />
+            <Spinner
+                android:id="@+id/destino_spinner"
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="5dp"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" />
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/textInputLayoutPDescargue"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                app:errorEnabled="true">
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/editTextPDescargue"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Punto de descargue"
+                    android:inputType="text" />
+            </android.support.design.widget.TextInputLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:id="@+id/LinearLayoutLicense"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
-                android:orientation="horizontal">
-
+                android:id="@+id/linearLayoutDueTo"
+            android:orientation="horizontal">
                 <Button
-                    android:id="@+id/buttonDateLicense"
+                    android:id="@+id/buttonDateNT"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Válida hasta:"/>
+                    android:text="Fecha"/>
 
                 <TextView
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textViewDateLicense"/>
+                    android:id="@+id/editTextDateNT"/>
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:orientation="horizontal">
+                <Button
+                    android:id="@+id/buttonTimeNT"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Hora"/>
+
+                <TextView
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/editTextTimeNT"/>
+            </LinearLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/textInputLayoutAnticipo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                app:errorEnabled="true">
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/editTextAnticipo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Anticipo"
+                    android:inputType="number" />
+            </android.support.design.widget.TextInputLayout>
 
             <Button
-                android:id="@+id/buttonRegisterR"
+                android:id="@+id/buttonAddTripNT"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/white"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="16dp"
                 android:layout_weight="1"
-                android:background="@color/colorAccent"
-                android:text="registrar" />
+                android:background="@color/colorPrimaryDark"
+                android:text="Registrar" />
 
-            <TextView
-                android:id="@+id/textViewLogin"
-                android:layout_width="wrap_content"
+            <Button
+                android:id="@+id/buttonBackNTrip"
+                android:layout_marginTop="32dp"
+                android:layout_width="@dimen/button_width"
+                android:layout_marginBottom="16dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
-                android:gravity="center"
+                android:background="@color/colorAccent"
                 android:text="Atrás"
-                android:textColor="@android:color/holo_red_dark" />
+                android:textColor="@android:color/white" />
+
             <LinearLayout
                 android:layout_marginTop="8dp"
-                android:id="@+id/llProgress"
+                android:id="@+id/llProgressNT"
                 android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -188,14 +193,24 @@
                     android:textColor="@android:color/white"
                     android:layout_marginTop="4dp"
                     android:gravity="center"
-                    android:text="Espera, creando nueva cuenta"
+                    android:text="Espera, generando nuevo viaje"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small" />
             </LinearLayout>
+
+
+
+
         </LinearLayout>
 
+
     </ScrollView>
-    </LinearLayout>
+
+
+
+</LinearLayout>
+
+
 
 </RelativeLayout>
