--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00bcd4</color>
+    <color name="colorPrimary">#FFFFFF</color>
     <color name="colorPrimaryDark">#0097a7</color>
     <color name="colorAccent">#dd2c00</color>
 </resources>
