--- a/app/src/main/res/layout/activity_add_gasolina.xml
+++ b/app/src/main/res/layout/activity_add_gasolina.xml
@@ -6,9 +6,19 @@
     android:layout_height="match_parent"
     tools:context="com.energismart.ayudante.AddGasolinaActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/my_toolbarAddGasolina"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
         android:layout_alignParentBottom="true">
         <ScrollView
             android:layout_width="fill_parent"
@@ -29,7 +39,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_margin="16dp"
-                    app:srcCompat="@drawable/logo" />
+                    app:srcCompat="@drawable/ic_local_gas_station_black_48dp" />
 
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/textInputLayoutLugarGasolina"
@@ -41,6 +51,7 @@
                         android:id="@+id/editTextLugarGasolina"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textSize="14pt"
                         android:hint="Lugar"
                         android:inputType="text" />
                 </android.support.design.widget.TextInputLayout>
@@ -54,8 +65,9 @@
                     <android.support.design.widget.TextInputEditText
                         android:id="@+id/editTextCostoGasolina"
                         android:layout_width="match_parent"
+                        android:textSize="14pt"
                         android:layout_height="wrap_content"
-                        android:hint="Costo total gasolina"
+                        android:hint="Costo total"
                         android:inputType="number" />
                 </android.support.design.widget.TextInputLayout>
 
@@ -69,6 +81,7 @@
                         android:id="@+id/editTextGalonesGasolina"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textSize="14pt"
                         android:hint="número de galones"
                         android:inputType="number" />
                 </android.support.design.widget.TextInputLayout>
@@ -76,95 +89,64 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginBottom="16dp"
                     android:id="@+id/linearLayoutFechaGasolina"
                     android:orientation="horizontal">
-                <!--    <Button
-                        android:id="@+id/buttonDateNG"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Fecha"/>
 
-                 -->
                     <ImageView
                         android:id="@+id/today_gasolina"
                         android:layout_gravity="center"
                         android:layout_width="wrap_content"
-                        android:layout_margin="16dp"
-                        android:layout_height="wrap_content"
+                        android:layout_height="48dp"
                         app:srcCompat="@drawable/ic_today_black_48dp" />
 
                     <TextView
                         android:layout_width="200dp"
                         android:layout_gravity="center"
-                        android:textSize="16pt"
+                        android:textSize="14pt"
                         android:layout_height="wrap_content"
                         android:id="@+id/textViewDateNG"/>
                 </LinearLayout>
 
-
-                <ImageView
-                    android:id="@+id/photo_gasolina"
-                    android:adjustViewBounds="true"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_width="wrap_content"
-                    android:layout_margin="16dp"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/ic_photo_camera_black_48dp" />
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginBottom="16dp"
+                    android:id="@+id/linearLayoutFotoAlimentacion"
+                    android:orientation="horizontal">
 
 
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_centerInParent="true"
-                    android:id="@+id/AdicionesGasolina"
-                    android:orientation="vertical">
+                    <ImageView
+                        android:id="@+id/photo_gasolina"
+                        android:adjustViewBounds="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="48dp"
+                        app:srcCompat="@drawable/ic_photo_camera_black_48dp" />
+
+
+                    <ImageView
+                        android:id="@+id/photo_gasolinaTomada"
+                        android:layout_marginLeft="16dp"
+                        android:adjustViewBounds="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="72dp"
+                        android:visibility="gone"
+                        app:srcCompat="@drawable/ic_photo_camera_black_48dp"/>
+
+                </LinearLayout>
+
 
                     <ImageView
                         android:id="@+id/photo_confirmGasolina"
                         android:adjustViewBounds="true"
                         android:layout_gravity="center_horizontal"
                         android:layout_width="wrap_content"
-                        android:layout_margin="16dp"
+                        android:layout_marginTop="16dp"
                         android:layout_height="wrap_content"
                         app:srcCompat="@drawable/ic_check_black_48dp" />
 
-                    <ImageView
-                        android:id="@+id/photo_cancelGasolina"
-                        android:adjustViewBounds="true"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_width="wrap_content"
-                        android:layout_margin="16dp"
-                        android:layout_height="wrap_content"
-                        android:layout_toRightOf="@+id/photo_confirmGasolina"
-                        app:srcCompat="@drawable/ic_cancel_black_48dp" />
-
-                </RelativeLayout>
-            <!--
-                <Button
-                    android:id="@+id/buttonAddGasolinaAD"
-                    android:layout_marginTop="32dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:background="@color/colorPrimaryDark"
-                    android:text="Agregar"
-                    android:textColor="@android:color/white" />
-
-                <Button
-                    android:id="@+id/buttonBackGasolina"
-                    android:layout_marginTop="32dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:background="@color/colorAccent"
-                    android:layout_marginBottom="16dp"
-                    android:text="Atrás"
-                    android:textColor="@android:color/white" />
-
-            -->
 
             </LinearLayout>
         </ScrollView>
