--- a/app/src/main/res/layout/activity_add_otro.xml
+++ b/app/src/main/res/layout/activity_add_otro.xml
@@ -6,10 +6,19 @@
     android:layout_height="match_parent"
     tools:context="com.energismart.ayudante.AddOtroActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/my_toolbarAddOtro"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
         android:layout_alignParentBottom="true">
         <ScrollView
             android:layout_width="fill_parent"
@@ -30,7 +39,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_margin="16dp"
-                    app:srcCompat="@drawable/logo" />
+                    app:srcCompat="@drawable/ic_more_horiz_black_48dp" />
 
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/textInputLayoutLugarOtro"
