--- a/app/src/main/res/layout/activity_add_peaje.xml
+++ b/app/src/main/res/layout/activity_add_peaje.xml
@@ -6,9 +6,19 @@
     android:layout_height="match_parent"
     tools:context="com.energismart.ayudante.AddPeajeActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/my_toolbarAddPeaje"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
         android:layout_alignParentBottom="true">
     <ScrollView
         android:layout_width="fill_parent"
@@ -29,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_margin="16dp"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="@drawable/ic_peaje_48dp" />
 
 
         <TextView
