--- a/app/src/main/res/layout/activity_add_truck.xml
+++ b/app/src/main/res/layout/activity_add_truck.xml
@@ -8,16 +8,18 @@
     android:background="@color/colorPrimary"
     tools:context="com.energismart.ayudante.AddTruckActivity">
 
-    <TextView
-        android:id="@+id/toolbar_title"
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/my_toolbarAddCamion"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:textAppearanceMedium"
-        android:layout_centerHorizontal="true"
-        tools:text="Agregar camion" />
+        android:background="@color/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_marginTop="48dp"
         android:layout_height="wrap_content">
         <ScrollView
             android:layout_width="fill_parent"
@@ -46,7 +48,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_margin="16dp"
-                    app:srcCompat="@drawable/logo" />
+                    app:srcCompat="@drawable/ic_new_truck" />
 
                 <TextView
                     android:id="@+id/textViewTruck"
