--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_margin="16dp"
-            android:src="@drawable/logo" />
+            app:srcCompat="@drawable/ic_app" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/textInputLayoutEmail"
@@ -61,24 +61,33 @@
                 android:inputType="textPassword" />
         </android.support.design.widget.TextInputLayout>
 
-        <Button
-            android:id="@+id/buttonLogin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="16dp"
-            android:background="@color/colorAccent"
-            android:text="@string/login"
-            android:textColor="@android:color/white" />
+            <ImageView
+                android:id="@+id/photo_login"
+                android:adjustViewBounds="true"
+                android:layout_gravity="center_horizontal"
+                android:layout_width="wrap_content"
+                android:layout_marginBottom="24dp"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_login" />
+
+
+            <ImageView
+                android:id="@+id/photo_register"
+                android:adjustViewBounds="true"
+                android:layout_gravity="center_horizontal"
+                android:layout_width="wrap_content"
+                android:layout_margin="16dp"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_new_user" />
 
         <Button
-            android:id="@+id/buttonRegister"
+            android:id="@+id/buttonGetPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
             android:layout_marginTop="16dp"
-            android:text="Registrarse"
-            android:gravity="center_horizontal" />
+            android:text="Recuperar contraseña"
+            android:gravity="center" />
+
     </LinearLayout>
 
     <LinearLayout
