--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,11 +11,17 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/my_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
+        android:id="@+id/scrollview">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,46 +30,67 @@
         android:id="@+id/box1"
         android:orientation="vertical">
 
-        <Button
-            android:id="@+id/buttonAddTruck"
-            android:layout_marginTop="16dp"
-            android:layout_width="@dimen/button_width"
-            android:layout_height="wrap_content"
+        <ImageView
+            android:id="@+id/imageApp"
+            android:layout_width="wrap_content"
+            android:layout_height="46pt"
             android:layout_gravity="center_horizontal"
-            android:background="@color/colorPrimaryDark"
-            android:text="Agregar camión"
-            android:textColor="@android:color/white" />
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="24dp"
+            app:srcCompat="@drawable/ic_app" />
 
-        <Button
-            android:id="@+id/buttonTrip"
-            android:layout_marginTop="16dp"
-            android:layout_width="@dimen/button_width"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:background="@color/colorPrimaryDark"
-            android:text="Agregar viaje"
-            android:textColor="@android:color/white" />
 
-        <Button
-            android:id="@+id/buttonContinue"
-            android:layout_marginTop="16dp"
-            android:layout_width="@dimen/button_width"
-            android:layout_height="wrap_content"
+        <ImageView
+            android:id="@+id/imageNewTruck"
+            android:layout_width="wrap_content"
+            android:layout_height="40pt"
             android:layout_gravity="center_horizontal"
-            android:background="@color/colorPrimaryDark"
-            android:text="Continuar viaje"
-            android:textColor="@android:color/white" />
+            android:layout_marginBottom="8dp"
+            app:srcCompat="@drawable/ic_new_truck" />
 
-        <Button
-            android:id="@+id/buttonLogout"
-            android:layout_marginTop="16dp"
-            android:layout_width="@dimen/button_width"
+        <RelativeLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_centerInParent="true"
+            android:layout_marginBottom="8dp"
+            android:id="@+id/Viajes"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/imageNewTrip"
+                android:layout_width="wrap_content"
+                android:layout_height="40pt"
+                android:layout_marginRight="48pt"
+                app:srcCompat="@drawable/ic_new_trip" />
+
+            <ImageView
+                android:id="@+id/imageContinueTrip"
+                android:layout_width="wrap_content"
+                android:layout_height="40pt"
+                android:layout_toRightOf="@+id/imageNewTrip"
+                app:srcCompat="@drawable/ic_continue_trip" />
+
+        </RelativeLayout>
+
+        <ImageView
+            android:id="@+id/photo_historialShow"
+            android:adjustViewBounds="true"
             android:layout_gravity="center_horizontal"
-            android:background="@color/colorAccent"
-            android:text="Cerrar sesión"
-            android:textColor="@android:color/white" />
+            android:layout_width="wrap_content"
+            android:layout_marginBottom="24dp"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_history_black_48dp" />
+
+        <ImageView
+            android:id="@+id/imageLogout"
+            android:layout_width="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_height="40pt"
+            app:srcCompat="@drawable/ic_logout" />
 
     </LinearLayout>
+
+    </ScrollView>
 
 </RelativeLayout>
