--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -18,6 +18,19 @@
         android:layout_alignParentRight="true" />
 
     <TextView
+        android:id="@+id/textoCat2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="12dp"
+        android:layout_below="@+id/textoCat"
+        android:visibility="gone"
+        android:gravity="right"
+        android:text="Texto Frase"
+        android:layout_alignParentRight="true" />
+
+
+    <TextView
         android:id="@+id/categoryCat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -42,7 +55,7 @@
         app:srcCompat="@drawable/logo"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:layout_alignBottom="@+id/textoCat"
+        android:layout_alignBottom="@+id/textoCat3"
         android:maxHeight="49dp"
         android:maxWidth="103dp"
         android:adjustViewBounds="true"
