--- a/app/src/main/res/menu/menu_agregar_gasto.xml
+++ b/app/src/main/res/menu/menu_agregar_gasto.xml
@@ -2,21 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity">
+    tools:context=".AddAlimentacionActivity">
 
 
     <item
-        android:id="@+id/action_password"
+        android:id="@+id/action_back_agregarGasto"
         android:orderInCategory="300"
-        android:title="Cambiar clave"
-        android:icon="@drawable/ic_vpn_key_black_24dp"
+        android:title="Atrás"
+        android:icon="@drawable/ic_arrow_back_black_48dp"
         app:showAsAction="ifRoom"></item>
 
     <item
-        android:id="@+id/action_favorite"
+        android:id="@+id/action_delete_agregarGasto"
         android:orderInCategory="300"
-        android:title="Cambiar perfil"
-        android:icon="@drawable/ic_mode_edit_black_24dp"
+        android:title="Atrás"
+        android:icon="@drawable/ic_delete_forever_black_48dp"
+        android:visible="false"
         app:showAsAction="ifRoom"></item>
 
 
